--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -75,9 +75,9 @@
 											<button style="border: none; background-color: transparent"><i class="far fa-window-close"></i></button>
 										</form>
 									</td>
-									<td class="product-image"><a th:href="@{'/single-product?id=' + ${cart.productId}}"><img th:src="${cart.productImg}" alt=""></a></td>
-									<td class="product-name" th:text="${cart.name}"></td>
-									<td class="product-price" th:text="${cart.price} + '원'"></td>
+									<td class="product-image"><a th:href="@{'/single-product?id=' + ${cart.product.id}}"><img th:src="${cart.product.productImg}" alt=""></a></td>
+									<td class="product-name" th:text="${cart.product.name}"></td>
+									<td class="product-price" th:text="${cart.product.price} + '원'"></td>
 									<td class="product-quantity">
 										<form th:action="@{'/carts/' + ${cart.id}}"th:method="post">
 											<input type="hidden" name="_method" value="put">
@@ -111,7 +111,7 @@
 								</tr>
 								<tr class="total-data">
 									<td><strong>배송비</strong></td>
-									<td th:text="${carts.deliveryPrice} + '원'"></td>
+									<td th:text="${carts.shippingFee} + '원'"></td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>최종 결제 금액</strong></td>
