--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -68,9 +68,9 @@
 							</thead>
 							<tbody th:align="center">
 								<tr class="total-data" th:each="cart : ${carts.cartList}">
-									<td class="product-image"><img th:src="${cart.productImg}" alt=""></td>
-									<td class="product-name" th:text="${cart.name}"></td>
-									<td class="product-price" th:text="${cart.price} + '원'"></td>
+									<td class="product-image"><img th:src="${cart.product.productImg}" alt=""></td>
+									<td class="product-name" th:text="${cart.product.name}"></td>
+									<td class="product-price" th:text="${cart.product.price} + '원'"></td>
 									<td class="product-quantity" th:text="${cart.cartCount} + '개'"></td>
 									<td class="product-total" th:text="${cart.totalProductPrice} + '원'"></td>
 								</tr>
@@ -82,7 +82,7 @@
 								</tr>
 								<tr class="total-data">
 									<td colspan="3" style="font-weight: bold">배송비</td>
-									<td colspan="2" th:text="${carts.deliveryPrice} + '원'"></td>
+									<td colspan="2" th:text="${carts.shippingFee} + '원'"></td>
 								</tr>
 								<tr class="total-data">
 									<td colspan="3" style="font-weight: bold">최종 결제 금액</td>
