--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -54,6 +54,7 @@
 
 			<div class="row product-lists">
 				<div th:each="dto : ${result.dtoList}"  class="col-lg-4 col-md-6 text-center strawberry">
+					<!--div th:each="dto : ${result.dtoList}"  th:class="col-lg-4 col-md-6 text-center ${dto.category}"-->
 					<div class="single-product-item">
 						<div class="product-image">
 							<a th:href="@{/single-product(id = ${dto.id}, page = ${result.page})}"><img th:src="${dto.productImg}" alt=""></a>
