--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -57,6 +57,7 @@
                     <a class="shopping-cart" th:if="${session.loginUser == null}" href="/login"><i class="far fa-heart"></i></a>
                     <a class="shopping-cart" th:unless="${session.loginUser == null}" href="#" th:href="@{/users/{id} (id=${session.id})}"><i class="far fa-heart"></i></a>
                     <a class="shopping-cart" href="/carts"><i class="fas fa-shopping-cart"></i></a>
+                    <a class="shopping-cart" href="/orders"><i class="fas fa-receipt"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
                     <a th:if="${session.loginUser == null}" href="/login">Login</a>
                     <a th:unless="${session.loginUser == null}" href="/logout">Logout</a>
