QnA 조회, 상세 조회

--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -21,7 +21,7 @@
                 <li><a href="#" th:href="@{/products/admin/{id} (id=${session.id})}">Products</a></li>
                 <li><a href="/">Orders</a></li>
                 <li><a href="/members">Members</a></li>
-                <li><a href="/">Q&A</a></li>
+                <li><a href="#" th:href="@{/questions}">Q&A</a></li>
                 <li><a href="/">Review</a></li>
                 <li>
                   <div class="header-icons">
