--- a/src/main/resources/templates/single-question.html
+++ b/src/main/resources/templates/single-question.html
@@ -14,6 +14,7 @@
 <!-- header -->
 <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
+
 <!-- search area -->
 <div class="search-area">
     <div class="container">
@@ -40,7 +41,7 @@
             <div class="col-lg-8 offset-lg-2 text-center">
                 <div class="breadcrumb-text">
                     <p>Catch Shop</p>
-                    <h1>상품</h1>
+                    <h1>Make a Question</h1>
                 </div>
             </div>
         </div>
@@ -51,39 +52,24 @@
 <!-- single product -->
 <div class="single-product mt-150 mb-150">
     <div class="container">
-        <!-- 상품 등록 페이지 이동 버튼 -->
-        <div class="cart-buttons" style="text-align: center; float: right;">
-            <a href="/products/admin" class="boxed-btn btn-lg black">+</a>
-        </div><br><br><br><br>
-
-        <!-- 전체 상품 조회 시작  -->
-        <div>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>상품명</th>
-                    <th>이미지</th>
-                    <th>가격</th>
-                    <th>수량</th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="product : ${products}">
-                    <td th:text="${product.name}"></td>
-                    <td><img th:src="${product.productImgPath}" style="width:100px; height:100px;"></td>
-                    <td th:text="${product.price}"></td>
-                    <td th:text="${product.stock}"></td>
-                    <td>
-                        <a href="#" th:href="@{/products/admin/{id}/edit (id=${product.id})}" class="btn btn-primary" role="button">수정</a>
-                    </td>
-                    <td>
-                        <a href="#" th:href="@{/products/admin/{id} (id=${product.id})}" class="btn btn-primary" role="button">삭제</a>
-                    </td>
-                </tr>
-                </tbody>
-            </table><br>
-        <!-- 전체 상품 조회 끝 -->
+        <div style="width:300px;margin:0 auto;">
+            <label for="category">카테고리</label>
+            <input type="text" id="category" th:field="*{question.category}"
+                   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" readonly="readonly"
+                   placeholder="이름을 입력하세요">
+        </div><br>
+        <div style="width:300px;margin:0 auto;">
+            <label for="writer">작성자</label>
+            <input type="text" id="writer" th:field="*{question.user.name}"
+                   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" readonly="readonly"
+                   placeholder="이름을 입력하세요">
+        </div><br>
+        <div style="width:300px;margin:0 auto;">
+            <label for="contents">내용</label>
+            <input type="text" id="contents" th:field="*{question.contents}"
+                   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" readonly="readonly"
+                   placeholder="이름을 입력하세요">
+        </div>
     </div>
 </div>
 <!-- end single product -->
@@ -111,15 +97,5 @@
 <script src="/assets/js/sticker.js"></script>
 <!-- main js -->
 <script src="/assets/js/main.js"></script>
-<script>
-    // // 삭제 재확인 메시지
-    // $(function(){
-    //     $('#btn-remove').click(function(){
-    //         if (confirm("상품을 삭제하시겠습니까")){
-    //             self.location.href = "@{/products/admin/{id} (id=${product.id})}";
-    //         }
-    //     });
-    // });
-</script>
 </body>
 </html>
