--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -47,6 +47,7 @@
                             <li data-filter=".strawberry">Strawberry</li>
                             <li data-filter=".berry">Berry</li>
                             <li data-filter=".lemon">Lemon</li>
+							<li data-filter=".kiwi">Kiwi</li>
                         </ul>
                     </div>
                 </div>
@@ -54,7 +55,7 @@
 
 			<div class="row product-lists">
 				<!-- div th:each="dto : ${result.dtoList}"  class="col-lg-4 col-md-6 text-center strawberry"-->
-				<div th:each="dto : ${result.dtoList}"  class="col-lg-4 col-md-6 text-center" th:attrappend="class=' ${dto.category.name}'">
+				<div th:each="dto : ${result.dtoList}"  class="col-lg-4 col-md-6 text-center" th:classappend=" ${dto.category.name}">
 
 					<div class="single-product-item">
 						<div class="product-image">
@@ -71,8 +72,6 @@
 					</div>
 				</div>
 			</div>
-
-
 
 
 			<div class="row">
