--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -75,7 +75,7 @@
 							</form>
 							<a class="shopping-cart" href="cart.html"><i class="far fa-heart fa-lg"></i></a>
 							<p/>
-							<p><strong>Categories: </strong>Fruits, Organic</p>
+							<p><strong>Categories: </strong>[[${dto.category.name}]]</p>
 						</div>
 						<h4>Share:</h4>
 						<ul class="product-share">
@@ -91,7 +91,61 @@
 	</div>
 	<!-- end single product -->
 
-	<!-- more products -->
+	<!-- 모달창 추가 -->
+	<div class="reviewModal modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Review</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div class="form-group">
+						<label>Reviewer ID</label>
+						<input type="text" class="form-control" name="uid">
+					</div>
+					<div class="form-group">
+						<label>Star<span class="star"></span> </label>
+						<div class="starrr"></div>
+					</div>
+					<div class="form-group">
+						<label>Reviewer Content</label>
+						<input type="text" class="form-control" name="text">
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary reviewSaveBtn">SaveChange</button>
+					<button type="button" class="btn btn-warning modifyBtn">Modify</button>
+					<button type="button" class="btn btn-danger removeBtn">Remove</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+<div class="imageModal modal" tabindex="-2" role="dialog">
+	<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Picture</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<!-- more products -->
 	<div class="more-products mb-150">
 		<div class="container">
 			<div class="row">
