--- a/src/main/resources/templates/admin/answer.html
+++ b/src/main/resources/templates/admin/answer.html
@@ -14,7 +14,6 @@
 <!-- header -->
 <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
-
 <!-- search area -->
 <div class="search-area">
     <div class="container">
@@ -41,7 +40,7 @@
             <div class="col-lg-8 offset-lg-2 text-center">
                 <div class="breadcrumb-text">
                     <p>Catch Shop</p>
-                    <h1>Make a Question</h1>
+                    <h1>상품 등록</h1>
                 </div>
             </div>
         </div>
@@ -52,46 +51,28 @@
 <!-- single product -->
 <div class="single-product mt-150 mb-150">
     <div class="container">
-        <div style="width:300px;margin:0 auto;">
-            <label for="category">카테고리</label>
-            <input type="text" id="category" th:field="*{question.category}"
-                   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" readonly="readonly">
-        </div><br>
-        <div style="width:300px;margin:0 auto;">
-            <label for="writer">작성자</label>
-            <input type="text" id="writer" th:field="*{question.user.name}"
-                   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" readonly="readonly">
-        </div><br>
-        <div style="width:300px;margin:0 auto;">
-            <label for="contents">내용</label>
-            <input type="text" id="contents" th:field="*{question.contents}"
-                   style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" readonly="readonly">
-        </div><br><br>
+        <!-- 답변 작성 폼 시작 -->
+        <form th:object="${answerDto}" method="post">
 
-        <div>
-            <table class="cart-table">
-                <thead>
-                <tr>
-                    <th>번호</th>
-                    <th>내용</th>
-                    <th>작성 날짜</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="answer : ${answers}">
-                    <td th:text="${answer.id}"></td>
-                    <td th:text="${answer.contents}"></td>
-                    <td th:text="${#temporals.format(answer.date, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                    <td>
-                        <a href="#" th:href="@{/answers/{id}/edit (id=${answer.id})}" class="btn btn-primary" role="button">수정</a>
-                    </td>
-                    <td>
-                        <a href="#" class="btn btn-primary" role="button">삭제</a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+            <!-- 내용 -->
+            <div style="width:300px;margin:0 auto;">
+                <label for="contents">답변 내용</label>
+                <input type="text" th:field="*{contents}" id="contents"
+                       placeholder="답변을 입력하세요.">
+            </div><br>
+
+            <!-- 답변 등록 버튼 시작 -->
+            <div class="cart-buttons" style="text-align: center;">
+                <div>
+                    <a class="boxed-btn btn-lg black">
+                        <button type="submit"
+                                style="width:100%; border: hidden; text-align: center; background-color: transparent;"
+                                class="btn btn-primary">등록</button>
+                    </a>
+                </div>
+            </div>
+        </form>
+        <!-- 답변 작성 폼 끝 -->
     </div>
 </div>
 <!-- end single product -->
