--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -120,7 +120,7 @@
 							</tbody>
 						</table>
 						<div class="cart-buttons" style="text-align: center;">
-							<a href="order" class="boxed-btn btn-lg black">주문하기</a>
+							<a href="/order" class="boxed-btn btn-lg black">주문하기</a>
 						</div>
 					</div>
 				</div>
