--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -56,7 +56,13 @@
             <div class="card">
             <div class="card-header">
                 <span th:text="${'주문 번호 - ' + order.id}" style="font-weight: bold"></span>&nbsp;&nbsp;
-                <span th:text="${#temporals.format(order.orderDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                <span th:text="${#temporals.format(order.orderDate, 'yyyy-MM-dd HH:mm:ss')}"></span>&nbsp;&nbsp;
+                <button th:if="${order.orderStatus.toString().equals('READY')}" style="border: none; color: white; background-color: #F28123FF">배송 준비 중</button>
+                <button th:if="${order.orderStatus.toString().equals('DELIVERY')}" style="border: none; color: white; background-color: #F28123FF">배송 완료</button>
+                <button th:if="${order.orderStatus.toString().equals('CANCEL')}" style="border: none; color: white; background-color: #F28123FF">주문 취소</button>
+                <div class="float-right" th:if="${order.orderStatus.toString().equals('READY')}">
+                    <a th:href="@{'/orders/' + ${order.id}}" class="btn" style="color: white; background-color: red">주문 취소</a>
+                </div>
             </div>
             <div class="card-body">
                 <h6>[배송 정보]</h6>
