--- a/src/main/resources/templates/make-question.html
+++ b/src/main/resources/templates/make-question.html
@@ -90,7 +90,7 @@
                 <input type="file" class="form-control" th:field="*{questionImg}"
                        onchange="imgPreview(img, event.target.files[0])"><br><br>
                 <img id="img" src="/assets/img/test_img.png" style="float:left;">
-            </div>
+            </div><br><br>
 
             <!-- Q&A 등록 버튼 시작 -->
             <div class="cart-buttons" style="text-align: center;">
