--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -62,7 +62,7 @@
                 <button th:if="${order.orderStatus.toString().equals('CANCEL')}" style="border: none; color: white; background-color: #F28123FF">주문 취소</button>
                 <form class="float-right" th:if="${order.orderStatus.toString().equals('READY')}" th:action="@{'/orders/' + ${order.id}}" th:method="post">
                     <input type="hidden" name="_method" value="patch">
-                    <button style="color: white; background-color: red">주문 취소</button>
+                    <button style="border: transparent; color: white; background-color: red">주문 취소</button>
                 </form>
             </div>
             <div class="card-body">
