--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -340,22 +340,26 @@
 													<th>번호</th>
 													<th>카테고리</th>
 													<th>작성자</th>
-													<th>내용</th>
 													<th>작성 날짜</th>
 												</tr>
 												</thead>
 												<tbody th:each="question : ${questions}">
 												<tr>
-													<td th:text="${question.id}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
+													<!-- 비밀글인 경우 비밀번호 입력 팝업 띄우기, 관리자는 해당 없음 -->
+													<td th:text="${question.id}" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
+													<td th:text="${question.id}" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="alertPopup(${question.password})" value="prompt"></td>
+													<div id='password'/>
+
 													<td th:text="${question.category}"></td>
 													<td th:text="${question.user.loginId}"></td>
-													<td th:text="${question.contents}"></td>
 													<td th:text="${#temporals.format(question.date, 'yyyy-MM-dd HH:mm:ss')}"></td>
 													<!--								<td th:if="${question.secret == 'secret'}" th:text="비밀 글입니다."></td>-->
 													<!--								<td th:unless="${question.secret == 'secret'}" th:text="${question.contents}"></td>-->
 												</tr>
 												<tr th:each="answer : ${question.answers}">
-													<td th:text="|Re: ${answer.contents}|" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
+													<td th:text="|Re: ${answer.user.role}|" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
+													<td th:text="|Re: ${answer.user.role}|" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="alertPopup(${question.password})" value="prompt"></td>
+													<div id='password'/>
 												</tr>
 												</tbody>
 											</table>
@@ -370,74 +374,6 @@
 		</div>
 	</div>
 	<!-- end more products -->
-
-
-
-
-<!--게시판 모음 -->
-<ul>
-  <li>
-    <button type="button" class="btn btn-primary">
-      Review Count <span class="badge badge-light">[[${dto.reviewCnt}]]</span>
-    </button>
-    <button type="button" class="btn btn-info addReviewBtn">
-      Review Register
-    </button>
-    <div class="list-group reviewList">
-
-    </div>
-    <a href="#" th:href="@{/products/{id}/questions (id=${dto.id})}">문의</a>
-  </li>
-</ul>
-<!--div class="goods-review">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-12">
-        <div class="cart-table-wrap">
-          <table class="cart-table">
-            <thead class="cart-table-head">
-              <tr class="table-head-row">
-                <th class="product-image">번호</th>
-                <th class="product-name">제목</th>
-                <th class="product-price">작성자</th>
-                <th class="product-quantity">작성일</th>
-                <th class="product-total">도움</th>
-                <th>조회</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="table-body-row">
-                <td class="product-name">1</td>
-                <td class="product-price">1</td>
-                <td class="product-quantity">1</td>
-                <td class="product-total">1</td>
-                <td>1</td>
-                <td>1</td>
-              </tr>
-              <tr class="table-body-row">
-                <td class="product-name">1</td>
-                <td class="product-price">1</td>
-                <td class="product-quantity">1</td>
-                <td class="product-total">1</td>
-                <td>1</td>
-                <td>1</td>
-              </tr>
-              <tr class="table-body-row">
-                <td class="product-name">1</td>
-                <td class="product-price">1</td>
-                <td class="product-quantity">1</td>
-                <td class="product-total">1</td>
-                <td>1</td>
-                <td>1</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-</div -->
-
 
 <!-- footer -->
 <div th:replace="fragments/footer :: footer"/>
@@ -472,6 +408,15 @@
 			return false;
 		}).filter(':eq(0)').click();
 	});
+
+	function alertPopup(password) {
+		let prompt = prompt('비밀번호를 입력하세요');
+		let inputPassword = Number(prompt);
+
+		if (String(inputPassword) != password) {
+			alert('비밀번호가 틀렸습니다!');
+		}
+	}
 </script>
 </body>
 </html>
