--- a/src/main/resources/templates/admin/qna.html
+++ b/src/main/resources/templates/admin/qna.html
@@ -146,8 +146,7 @@
                                             <tr>
                                                 <!-- 비밀글인 경우 비밀번호 입력 팝업 띄우기, 관리자는 해당 없음 -->
                                                 <td th:text="${question.id}" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
-                                                <td th:text="${question.id}" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="alertPopup(${question.password})" value="prompt"></td>
-                                                <div id='password'/>
+                                                <td th:text="${question.id}" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:attr="onclick=|alertPopup('*${question.password}')|" value="prompt"></td>
 
                                                 <td th:text="${question.category}"></td>
                                                 <td th:text="${question.user.loginId}"></td>
@@ -157,7 +156,7 @@
                                             </tr>
                                             <tr th:each="answer : ${question.answers}">
                                                 <td th:text="|Re: ${answer.user.role}|" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
-                                                <td th:text="|Re: ${answer.user.role}|" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="alertPopup(${question.password})" value="prompt"></td>
+                                                <td th:text="|Re: ${answer.user.role}|" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:attr="onclick=|alertPopup('*${question.password}')|" value="prompt"></td>
                                                 <div id='password'/>
                                             </tr>
                                             </tbody>
